Ported BUG#50473 and BUG#50474 to mysql-5.1-rep+2.

revid:luis.soares@sun.com-20100126100856-nrl0jmkc9s2cg8ck

Conflicts
=========
  Text conflict in sql/log_event.cc